syntax = "proto3";

package silenteight.datasource.api.document.v1;

import "google/api/annotations.proto";

option java_package = "com.silenteight.datasource.api.document.v1";
option java_outer_classname = "DocumentProto";
option java_multiple_files = true;

service DocumentInputService {
  rpc BatchGetMatchDocumentInputs (BatchGetMatchDocumentInputsRequest) returns (stream BatchGetMatchDocumentInputsResponse) {
    option (google.api.http) = {
      post: "/agent-inputs/document/versions/v1/matches:batchGet"
      body: "*"
    };
  }
}

message BatchGetMatchDocumentInputsRequest {
  // The list of matches data is requested for, in form of `alerts/<Alert ID>/matches/<Match ID>`.
  repeated string matches = 1;
  // The list of features the input data for each match is requested, in form of `features/<Feature ID>`.
  repeated string features = 2;
}

message BatchGetMatchDocumentInputsResponse {
  repeated DocumentInput document_inputs = 1;
}

message DocumentInput {
  string match = 1;
  repeated DocumentFeatureInput document_features_input = 2;
}

message DocumentFeatureInput {
  string feature = 1;
  repeated string alerted_party_documents = 2;
  repeated string watchlist_documents = 3;
}
